campagne crowdfunding Cromwell

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 creations/commencement/media/images/.DS_Store
 creations/dragons/media/.DS_Store
 creations/ERPLJ/media/images/mesdames-a-erplj-cover.png
+creations/SPECTATEURS/media/.DS_Store
+.DS_Store
+creations/.DS_Store
+creations/.DS_Store
+.DS_Store
