ajouts cromwell - videos - images

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@ creations/SPECTATEURS/media/.DS_Store
 creations/.DS_Store
 creations/.DS_Store
 .DS_Store
+creations/cromwell/media/images/photos-origine/.DS_Store
+creations/cromwell/media/images/photos-origine/.DS_Store
+creations/cromwell/media/images/photos-origine/affiche-cromwell-jaune_vf.png
+creations/cromwell/media/images/photos-origine/banniere_fb_cromwell_V5.png
+creations/cromwell/media/images/photos-origine/cromwell-banniere-2.png
+creations/cromwell/media/images/photos-origine/cromwell-banniere-4-3-bg-2.png
+creations/cromwell/media/images/photos-origine/cromwell-silhouettes-coline-lubin.jpg
+creations/cromwell/media/images/photos-origine/.DS_Store
+creations/cromwell/media/images/photos-origine/.DS_Store
